w-gory-angular/src/app/component/zatwierdzenie-wycieczki/zatwierdzenie-wycieczki.component.css
.bg-w-gory {
  background-color: #82E180;
  opacity: 75%;
  border-color: #707070;
  border-radius: 10px;
  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.16);
  width: 1680px;
}

h2 {
  font-weight: bold;
}

.card-body {
  margin: auto;
  width: 1000px;
}

.table-w-gory {
  font-size: 23px;

  border-collapse: separate;
  border-spacing: 0 1.5em;
}

.table-w-gory>tr {
  padding-top: 200px;
}

.item-w-gory {
  width: 50%;
  float: left;
}

.btn {
  height: 50px;
  width: 150px;
}

.btn-success {
  background-color: #26FB4A;
  color: white;
  font-weight: bold;
  border: 0;
}

.btn-secondary {
  background-color: #7F7F7F;
  color: white;
  font-weight: bold;
  border: 0;
}

.table {
  font-weight: normal;
  font-size: 20px;
}

#scrolltable {
  margin-top: 20px;
  height: 180px;
  overflow: auto;
  text-align: center;
  border-bottom: 1px solid #1B9A24;
  border-top: 1px solid #1B9A24;
}

#scrolltable th div {
  position: absolute;
}

#scrolltable td {
  border-bottom: 1px solid rgba(142, 213, 138, 1);
  background-color: rgba(160, 224, 145, 1);
  height: 60px;
}

.overlay {
  position: fixed;
  padding: 0;
  margin: 0;

  top: 0;
  left: 0;

  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.75);
  z-index: 100;
}

.overlay>.bg-w-gory {
  margin: auto;
  position: absolute;
  top: 50%;
  left: 50%;

  display: table;
  -moz-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  width: 400px;
  height: 200px;
  font-size: 27px;
  text-align: center;
}

.overlay>.bg-w-gory>span {
  font-weight: bold;

  display: table-cell;
  vertical-align: middle;
  white-space: pre-line;
}

